--- a/formulario.html
+++ b/formulario.html
@@ -31,10 +31,10 @@
 
   <div>
     <h2>Lista de invitados</h2>
-
+    <div id="lista-de-invitados"></div> <!--Se agrega div para trabajar con lista invitados-->
   </div>
 
-  <script src="../formulario.js"></script>
+  <script src="./formulario.js"></script> <!--Se cambio porque lo estaba buscando en una carpeta anterior-->
 </body>
 
 </html>
